--- a/frontend/Admin-HotelCocoMilk/src/app/paginas/login/login/login.component.css
+++ b/frontend/Admin-HotelCocoMilk/src/app/paginas/login/login/login.component.css
@@ -1,80 +1,173 @@
-* {
-    box-sizing: border-box;
-    }
-    
-    *:focus {
-        outline: none;
-    }
+
     body {
-    font-family: Arial;
-    background-color: #ffffff;
-    padding: 50px;
-    }
-    .login {
-    margin: 20px auto;
-    width: 300px;
-    }
-    .login-screen {
-    background-color: #FFF;
-    padding: 20px;
-    border-radius: 5px;
-    border-style: solid;
-    border-color: rgb(0, 0, 0);
+      background-image: linear-gradient(135deg, #FAB2FF 10%, #1904E5 100%);
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      font-family: "Open Sans", sans-serif;
+      color: #333333;
+      padding-bottom: 10%;
+      padding-top: 5%;
     }
     
-    .app-title {
-    text-align: center;
-    color: #777;
-    }
-    
-    .login-form {
-    text-align: center;
-    }
-    .control-group {
-    margin-bottom: 10px;
-    }
-    
-    input {
-    text-align: center;
-    background-color: #ECF0F1;
-    border: 2px solid transparent;
-    border-radius: 3px;
-    font-size: 16px;
-    font-weight: 200;
-    padding: 10px 0;
-    width: 250px;
-    transition: border .5s;
-    }
-    
-    input:focus {
-    border: 2px solid #3498DB;
-    box-shadow: none;
-    }
-    
-    .btn {
-      border: 2px solid transparent;
-      background: #3498DB;
-      color: #ffffff;
-      font-size: 16px;
-      line-height: 25px;
-      padding: 10px 0;
-      text-decoration: none;
-      text-shadow: none;
-      border-radius: 3px;
-      box-shadow: none;
-      transition: 0.25s;
-      display: block;
-      width: 250px;
+    .box-form {
       margin: 0 auto;
+      width: 80%;
+      background: #FFFFFF;
+      border-radius: 10px;
+      overflow: hidden;
+      display: flex;
+      flex: 1 1 100%;
+      align-items: stretch;
+      justify-content: space-between;
+      box-shadow: 0 0 20px 6px #090b6f85;
+     
+    }
+    @media (max-width: 980px) {
+      .box-form {
+        flex-flow: wrap;
+        text-align: center;
+        align-content: center;
+        align-items: center;
+      }
+    }
+    .box-form div {
+      height: auto;
+    }
+    .box-form .left {
+      color: #FFFFFF;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-image: url("https://city.woow.com.uy/media/catalog/product/cache/afd5bcc02d0b2b77d40cb1043f7cbc53/6/_/6_2.jpg");
+      overflow: hidden;
+    }
+    .box-form .left .overlay {
+      padding: 30px;
+      width: 100%;
+      height: 100%;
+      background: #5961f9ad;
+      overflow: hidden;
+      box-sizing: border-box;
+    }
+    .box-form .left .overlay h1 {
+      font-size: 10vmax;
+      line-height: 1;
+      font-weight: 900;
+      margin-top: 40px;
+      margin-bottom: 20px;
+    }
+    .box-form .left .overlay span p {
+      margin-top: 30px;
+      font-weight: 900;
+    }
+    .box-form .left .overlay span a {
+      background: #3b5998;
+      color: #FFFFFF;
+      margin-top: 10px;
+      padding: 14px 50px;
+      border-radius: 100px;
+      display: inline-block;
+      box-shadow: 0 3px 6px 1px #042d4657;
+    }
+    .box-form .left .overlay span a:last-child {
+      background: #1dcaff;
+      margin-left: 30px;
+    }
+    .box-form .right {
+      padding: 40px;
+      overflow: hidden;
+    }
+    @media (max-width: 980px) {
+      .box-form .right {
+        width: 100%;
+      }
+    }
+    .box-form .right h5 {
+      font-size: 4vmax;
+      line-height: 0;
+    }
+    .box-form .right p {
+      font-size: 14px;
+      color: #B0B3B9;
+    }
+    .box-form .right .inputs {
+      overflow: hidden;
+    }
+    .box-form .right input {
+      width: 100%;
+      padding: 10px;
+      margin-top: 25px;
+      font-size: 16px;
+      border: none;
+      outline: none;
+      border-bottom: 2px solid #B0B3B9;
+    }
+    .box-form .right .remember-me--forget-password {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .box-form .right .remember-me--forget-password input {
+      margin: 0;
+      margin-right: 7px;
+      width: auto;
+    }
+    .box-form .right button {
+      float: right;
+      color: #fff;
+      font-size: 16px;
+      padding: 12px 35px;
+      border-radius: 50px;
+      display: inline-block;
+      border: 0;
+      outline: 0;
+      box-shadow: 0px 4px 20px 0px #320ab7a6;
+      background-image: linear-gradient(135deg, #614bf1 10%, #3d07a9 100%);
     }
     
-    .btn:hover {
-      background-color: #2980B9;
-    }
-    
-    .login-link {
-      font-size: 12px;
-      color: #444;
+    label {
       display: block;
-        margin-top: 12px;
+      position: relative;
+      margin-left: 30px;
+    }
+    
+    label::before {
+      content: ' \f00c';
+      position: absolute;
+      font-family: FontAwesome;
+      background: transparent;
+      border: 3px solid #70F570;
+      border-radius: 4px;
+      color: transparent;
+      left: -30px;
+      transition: all 0.2s linear;
+    }
+    
+    label:hover::before {
+      font-family: FontAwesome;
+      content: ' \f00c';
+      color: #fff;
+      cursor: pointer;
+      background: #70F570;
+    }
+    
+    label:hover::before .text-checkbox {
+      background: #70F570;
+    }
+    
+    label span.text-checkbox {
+      display: inline-block;
+      height: auto;
+      position: relative;
+      cursor: pointer;
+      transition: all 0.2s linear;
+    }
+    
+    label input[type="checkbox"] {
+      display: none;
+    }
+
+    .titulo{
+      margin-bottom: 20%;
+      margin-top: 10%;
     }
