--- a/frontend/Admin-HotelCocoMilk/src/app/paginas/home/home/home.component.html
+++ b/frontend/Admin-HotelCocoMilk/src/app/paginas/home/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<div class="row no-gutters">
+  <div class="col-md-3 col-lg-2">
+      <app-menu></app-menu>
+  </div>
+  <div class="col-md-9 col-lg-10">
+      <router-outlet></router-outlet>
+  </div>
+</div>
