--- a/frontend/Admin-HotelCocoMilk/src/app/core/componentes/menu/menu.component.html
+++ b/frontend/Admin-HotelCocoMilk/src/app/core/componentes/menu/menu.component.html
@@ -1,29 +1,56 @@
 <section class="hero">
-  <nav id="sidebarMenu" class="d-md-block bg-light sidebar collapse">
-     <div class="hero__categories sidebar-sticky">
-        <ul class="nav flex-column">
-           <li class="nav-item active">
-              <a class="nav-link" routerLink="/home/bienvenida" routerLinkActive="active" ariaCurrentWhenActive="page">Home</a>
-           </li>
-           <li class="nav-item">
-              <a class="nav-link" routerLink="/home/pagina" routerLinkActive="active" ariaCurrentWhenActive="page">Modificar Paginas</a>
-           </li>
-           <li class="nav-item">
-              <a class="nav-link" routerLink="/home/reservacion" routerLinkActive="active"  ariaCurrentWhenActive="page">Lista de Reservaciones</a>
-           </li>
-           <li class="nav-item">
-              <a class="nav-link" routerLink="/home/admin_habitacion" routerLinkActive="active"  ariaCurrentWhenActive="page">Administrar habitaciones</a>
-           </li>
-           <li class="nav-item">
-              <a class="nav-link" routerLink="/home/estado_hotel" routerLinkActive="active"  ariaCurrentWhenActive="page">Estado del Hotel Hoy</a>
-           </li>
-           <li class="nav-item">
-              <a class="nav-link" routerLink="/home/disponibilidad_habitacion" routerLinkActive="active"  ariaCurrentWhenActive="page">Disponibilidad de habitaciones</a>
-           </li>
-           <li class="nav-item">
-              <a class="nav-link" routerLink="/home/publicidad" routerLinkActive="active"  ariaCurrentWhenActive="page">Publicidad</a>
-           </li>
-        </ul>
-     </div>
-  </nav>
+   <nav id="sidebarMenu" class="d-md-block bg-light sidebar collapse">
+      <div class="hero__categories sidebar-sticky">
+         <ul class="nav flex-column">
+            <li class="nav-item active">
+               <a class="nav-link" routerLink="/home/bienvenida" routerLinkActive="active"
+                  ariaCurrentWhenActive="page">Home</a>
+            </li>
+            <li class="nav-item">
+               <a class="nav-link" routerLink="/home/pagina" routerLinkActive="active"
+                  ariaCurrentWhenActive="page">Modificar Paginas</a>
+            </li>
+            <li class="nav-item">
+               <a class="nav-link" routerLink="/home/reservacion" routerLinkActive="active"
+                  ariaCurrentWhenActive="page">Lista de Reservaciones</a>
+            </li>
+            <li class="nav-item">
+               <a class="nav-link" routerLink="/home/admin_habitacion" routerLinkActive="active"
+                  ariaCurrentWhenActive="page">Administrar habitaciones</a>
+            </li>
+            <li class="nav-item">
+               <a class="nav-link" routerLink="/home/estado_hotel" routerLinkActive="active"
+                  ariaCurrentWhenActive="page">Estado del Hotel Hoy</a>
+            </li>
+            <li class="nav-item">
+               <a class="nav-link" routerLink="/home/disponibilidad_habitacion" routerLinkActive="active"
+                  ariaCurrentWhenActive="page">Disponibilidad de habitaciones</a>
+            </li>
+            <li class="nav-item">
+               <a class="nav-link" routerLink="/home/publicidad" routerLinkActive="active"
+                  ariaCurrentWhenActive="page">Publicidad</a>
+            </li>
+         </ul>
+         <hr>
+         <div class="d-flex">
+            <div  class="p-2">
+               <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                  class="bi bi-person-circle" viewBox="0 0 16 16">
+                  <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+                  <path fill-rule="evenodd"
+                     d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+               </svg>
+               <strong class="ml-1">{{userName}}</strong>
+            </div>
+            <a class="ml-auto p-2" style="color: currentColor;" (click)="cerrarSesion()" data-toggle="tooltip" data-placement="top" title="Cerrar Sesion">
+               <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                  class="bi bi-door-open" viewBox="0 0 16 16">
+                  <path d="M8.5 10c-.276 0-.5-.448-.5-1s.224-1 .5-1 .5.448.5 1-.224 1-.5 1z" />
+                  <path
+                     d="M10.828.122A.5.5 0 0 1 11 .5V1h.5A1.5 1.5 0 0 1 13 2.5V15h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V1.5a.5.5 0 0 1 .43-.495l7-1a.5.5 0 0 1 .398.117zM11.5 2H11v13h1V2.5a.5.5 0 0 0-.5-.5zM4 1.934V15h6V1.077l-6 .857z" />
+               </svg>
+            </a>
+         </div>
+      </div>
+   </nav>
 </section>
