--- a/frontend/Admin-HotelCocoMilk/src/app/paginas/admin-habitacion/admin-habitacion.component.html
+++ b/frontend/Admin-HotelCocoMilk/src/app/paginas/admin-habitacion/admin-habitacion.component.html
@@ -1,3 +1,13 @@
 <div class="title">
   <h2 style="color: white; padding-top: 5px;"> Administrar Habitación</h2>
 </div>
+<div class="list-habitacion">
+  <table class="tabla-habitacion">
+    <thead>
+      <tr>
+        <!-- <th *ngFor="let example of examples">{{example}}</th> -->
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+</div>
