--- a/frontend/Admin-HotelCocoMilk/src/app/core/componentes/menu/menu.component.html
+++ b/frontend/Admin-HotelCocoMilk/src/app/core/componentes/menu/menu.component.html
@@ -27,6 +27,10 @@
                   ariaCurrentWhenActive="page">Disponibilidad de habitaciones</a>
             </li>
             <li class="nav-item">
+               <a class="nav-link" routerLink="/home/temporadas" routerLinkActive="active"
+                  ariaCurrentWhenActive="page">Temporadas y Ofertas</a>
+            </li>
+            <li class="nav-item">
                <a class="nav-link" routerLink="/home/publicidad" routerLinkActive="active"
                   ariaCurrentWhenActive="page">Publicidad</a>
             </li>
