--- a/frontend/Admin-HotelCocoMilk/src/app/paginas/admin-habitacion/admin-habitacion.component.css
+++ b/frontend/Admin-HotelCocoMilk/src/app/paginas/admin-habitacion/admin-habitacion.component.css
@@ -7,3 +7,37 @@
 .habitaciones{
   display: flex;
 }
+.btn {
+  margin-left: 1rem;
+  font-size: 17px;
+  background-color: #0f1521;
+  color: #fff;
+  padding: 8px 0px;
+  width: 90%;
+  max-width: 144px;
+  text-align: center;
+  display: inline-block;
+  transition: ease-in all 0.5s;
+  font-weight: 500;
+  border-radius: 30px;
+}
+
+.btn:hover {
+  background: #1ddd7d;
+  color: #fff;
+  transition: ease-in all 0.5s;
+}
+
+.cancel:hover {
+  background: #fe0000;
+  color: #fff;
+  transition: ease-in all 0.5s;
+}
+.tipoHabitacion{
+  display: flex;
+  margin-bottom: 1rem;
+}
+
+.edit{
+  width: 15%;
+}
