--- a/frontend/Admin-HotelCocoMilk/src/app/paginas/temporadas/temporadas.component.html
+++ b/frontend/Admin-HotelCocoMilk/src/app/paginas/temporadas/temporadas.component.html
@@ -11,7 +11,7 @@
             <div class="col-md-2 combobox"> 
                 <div class="row">
                     <div class="col-md-12">
-                      <label>Escoja una opcion:</label>
+                      <label>Escoja una opción:</label>
                     </div>
                     <div class="col-md-12">
                         <select [(ngModel)]="tipoSeleccionado">
