--- a/frontend/Admin-HotelCocoMilk/src/app/paginas/admin-habitacion/admin-habitacion.component.html
+++ b/frontend/Admin-HotelCocoMilk/src/app/paginas/admin-habitacion/admin-habitacion.component.html
@@ -83,3 +83,4 @@
   </div>
 </div>
 <app-modificar-habitacion [tipoHabitacion]="tipoHabitacionModificar"></app-modificar-habitacion>
+<app-notificacion-dialog [mensaje]="this.respuesta"></app-notificacion-dialog>
