--- a/frontend/Admin-HotelCocoMilk/src/app/paginas/temporadas/temporadas.component.html
+++ b/frontend/Admin-HotelCocoMilk/src/app/paginas/temporadas/temporadas.component.html
@@ -3,7 +3,7 @@
   </div>
 
   <section>
-    <app-modificar-temporadas></app-modificar-temporadas>
+    <app-modificar-temporadas [temporadas]="temporadasModificar"></app-modificar-temporadas>
     <div class="col-md-12">
         <div class="row">
             <div class="col-md-2 combobox"></div>
