--- a/frontend/Admin-HotelCocoMilk/src/app/paginas/admin-habitacion/admin-habitacion.component.css
+++ b/frontend/Admin-HotelCocoMilk/src/app/paginas/admin-habitacion/admin-habitacion.component.css
@@ -1,13 +1,32 @@
 .title{
   background-color: #0f1521;
   text-align: center;
+  vertical-align: middle;
   padding-bottom: 0.1rem;
   width: 100%;
 }
+
 .habitaciones{
   display: flex;
 }
+
+/*
 .btn {
+  margin-left: 1rem;
+  font-size: 17px;
+  background-color: #0f1521;
+  color: #fff;
+  padding: 8px 0px;
+  width: 90%;
+  max-width: 144px;
+  text-align: center;
+  display: inline-block;
+  transition: ease-in all 0.5s;
+  font-weight: 500;
+  border-radius: 30px;
+}*/
+
+.add_more {
   margin-left: 1rem;
   font-size: 17px;
   background-color: #0f1521;
@@ -22,22 +41,48 @@
   border-radius: 30px;
 }
 
-.btn:hover {
+.add_more:hover {
   background: #1ddd7d;
   color: #fff;
   transition: ease-in all 0.5s;
 }
+
+/*
+.btn:hover {
+  background: #1ddd7d;
+  color: #fff;
+  transition: ease-in all 0.5s;
+}*/
 
 .cancel:hover {
   background: #fe0000;
   color: #fff;
   transition: ease-in all 0.5s;
 }
+
 .tipoHabitacion{
   display: flex;
   margin-bottom: 1rem;
+  vertical-align: middle;
+}
+
+td, th {
+  text-align: center;
+  vertical-align: middle;
 }
 
 .edit{
   width: 15%;
+}
+
+.deleteTabla{
+  font-size: 24px;
+  color: #fe0000;
+  background-color: #fff;
+  fill: none;
+}
+
+.updateTabla{
+  font-size: 24px;
+  color: blue;
 }
