--- a/frontend/Admin-HotelCocoMilk/src/app/core/componentes/menu/menu.component.html
+++ b/frontend/Admin-HotelCocoMilk/src/app/core/componentes/menu/menu.component.html
@@ -8,7 +8,7 @@
             </li>
             <li class="nav-item">
                <a class="nav-link" routerLink="/home/pagina" routerLinkActive="active"
-                  ariaCurrentWhenActive="page">Modificar Paginas</a>
+                  ariaCurrentWhenActive="page">Modificar Páginas</a>
             </li>
             <li class="nav-item">
                <a class="nav-link" routerLink="/home/reservacion" routerLinkActive="active"
@@ -16,7 +16,7 @@
             </li>
             <li class="nav-item">
                <a class="nav-link" routerLink="/home/admin_habitacion" routerLinkActive="active"
-                  ariaCurrentWhenActive="page">Administrar habitaciones</a>
+                  ariaCurrentWhenActive="page">Administrar Habitaciones</a>
             </li>
             <li class="nav-item">
                <a class="nav-link" routerLink="/home/estado_hotel" routerLinkActive="active"
@@ -24,7 +24,7 @@
             </li>
             <li class="nav-item">
                <a class="nav-link" routerLink="/home/disponibilidad_habitacion" routerLinkActive="active"
-                  ariaCurrentWhenActive="page">Disponibilidad de habitaciones</a>
+                  ariaCurrentWhenActive="page">Disponibilidad de Habitaciones</a>
             </li>
             <li class="nav-item">
                <a class="nav-link" routerLink="/home/temporadas" routerLinkActive="active"
