--- a/frontend/Admin-HotelCocoMilk/src/app/paginas/estado-hotel/estado-hotel.component.html
+++ b/frontend/Admin-HotelCocoMilk/src/app/paginas/estado-hotel/estado-hotel.component.html
@@ -1,5 +1,5 @@
 <div class="title">
-  <h2 style="color: white; padding-top: 5px;"> Estado del Hotel Hoy</h2>
+  <h2 style="color: white; padding-top: 5px;">Estado del Hotel Hoy</h2>
 </div>
 
 <div class="fecha">
@@ -9,7 +9,7 @@
 <table class="table" id="dataTable">
   <thead class="thead-dark">
     <tr>
-      <th scope="col">Numero de habitacion</th>
+      <th scope="col">Número de habitación</th>
       <th scope="col">Tipo</th>
       <th scope="col">Estado</th>
     </tr>
