--- a/frontend/Admin-HotelCocoMilk/src/app/paginas/reservacion/reservacion.component.html
+++ b/frontend/Admin-HotelCocoMilk/src/app/paginas/reservacion/reservacion.component.html
@@ -1,18 +1,18 @@
 <div class="title">
-  <h2 style="color: white; padding-top: 5px;"> Lista de Reservaciones</h2>
+  <h2 style="color: white; padding-top: 5px;">Lista de Reservaciones</h2>
 </div>
 <div class="table-responsive">
   <table class="table" id="dataTable">
     <thead class="thead-dark">
       <tr>
         <th scope="col">Fecha</th>
-        <th scope="col">Id Reserva</th>
+        <th scope="col">Reserva</th>
         <th scope="col">Nombre</th>
         <th scope="col">Apellido</th>
         <th scope="col">Email</th>
         <th scope="col">Tarjeta</th>
-        <th scope="col">Transaccion</th>
-        <th scope="col">Fecha llegada</th>
+        <th scope="col">Transacción</th>
+        <th scope="col">Fecha Llegada</th>
         <th scope="col">Fecha Salida</th>
         <th scope="col">Tipo</th>
         <th scope="col">Aciones</th>
@@ -20,15 +20,15 @@
     </thead>
     <tbody *ngFor="let reserva of dataReserva">
       <tr id="datos-tabla">
-        <td>{{reserva.fecha}}</td>
+        <td>{{reserva.fecha | date:"dd-MM-yyyy" }}</td>
         <td>{{reserva.id_reserva}}</td>
         <td>{{reserva.nombre}}</td>
         <td>{{reserva.apellido}}</td>
         <td>{{reserva.correo}}</td>
         <td>{{reserva.tarjeta}}</td>
         <td>{{reserva.transaccion}}</td>
-        <td>{{reserva.fecha_entrada}}</td>
-        <td>{{reserva.fecha_salida}}</td>
+        <td>{{reserva.fecha_entrada | date:"dd-MM-yyyy" }}</td>
+        <td>{{reserva.fecha_salida | date:"dd-MM-yyyy" }}</td>
         <td>{{reserva.tipo}}</td>
         <td>
           <button class="btn cancel" type="button" (click)="verReserva(reserva)" >
